Revamp scanfolder plugin: - Fixes a crash - Improves performance of handling large directory structures - Some general code cleanup

BUG: 263813
BUG: 271657